# whisperd-nl

./: .gitignore  CGN_2.0.3_STRUCTURE.md  LICENSE  README.md  pyproject.toml
runs/Jun15_00-46-20_power/: events.out.tfevents.1749941193.power.10828.0
runs/Jun16_06-33-11_power/: events.out.tfevents.1750048400.power.3869.0  events.out.tfevents.1750081017.power.3869.1
src/: cgn_inspector.py  config.py  dataset_loader.py  inference.py  prepare_data.py  resume_training.py  text_normalizer.py  train_configurable.py  upload_to_huggingface.py
src/utils/: audio.py
templates/: annotation.html  base.html  component.html  files.html  home.html
