[project]
name = "whisper-nl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "evaluate>=0.4.3",
    "fastapi[standard]>=0.115.12",
    "gradio>=5.3.0",
    "jiwer>=3.1.0",
    "librosa>=0.11.0",
    "standard-imghdr>=3.13.0",
    "tensorboard>=2.19.0",
    "torch>2.6",
    "torchaudio>2.6",
    "tqdm>=4.67.1",
    "transformers[torch]>=4.52.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.11.12",
]
# Install latest to support Blackwell chipset
override-dependencies = ["torch>2.6", "torchaudio>2.6"]
